[package]
name = "crypta-cli"
description = "Command-line interface for crypta"

version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
publish.workspace = true

[[bin]]
name = "crypta"
path = "src/main.rs"

[dependencies]
crypta.workspace = true

argparse.path = "../../lib-argparse" #.git = "https://github.com/shipsimfan/lib-argparse"
